<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zhecht.helloworld.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="443dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="443dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="89dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="363dp"
        android:layout_height="502dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime"
        android:id="@+id/constraintLayout">

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn2"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:background="@color/nice_green"
        android:onClick="sendMessage"
        android:tag="2000"
        android:text="@string/btn2_txt"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.491"

        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="286dp"
        android:background="@color/nice_green"
        android:onClick="sendMessage"
        android:tag="1960"
        android:text="@string/btn6_txt"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="212dp"
        android:background="@color/nice_green"
        android:onClick="sendMessage"
        android:tag="1970"
        android:text="@string/btn5_txt"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="140dp"
        android:background="@color/nice_green"
        android:onClick="sendMessage"
        android:tag="1980"
        android:text="@string/btn4_txt"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.491"

        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="68dp"
        android:background="@color/nice_green"
        android:onClick="sendMessage"
        android:tag="1990"
        android:text="@string/btn3_txt"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

</android.support.constraint.ConstraintLayout>
